--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "About"
-description: "《你是我的梦想》"
-header-img: "img/about-bg.jpg"
+description: "Ethan"
+header-img: "img/home-bg.jpg"
 multilingual: true
 ---
 
