--- a/archive.html
+++ b/archive.html
@@ -2,7 +2,7 @@
 title: Archive
 layout: default
 #description: "「Records」"
-header-img: "img/home-bg.jpg"
+header-img: "img/tag-bg.jpg"
 ---
 
 <!-- 
